--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "babel-core": "^6.11.4",
+    "babel-eslint": "^6.1.2",
     "babel-loader": "^6.2.4",
     "babel-plugin-react-html-attrs": "^2.0.0",
     "babel-plugin-transform-class-properties": "^6.10.2",
@@ -18,13 +19,14 @@
     "babel-preset-es2015": "^6.9.0",
     "babel-preset-react": "^6.11.1",
     "bootstrap": "^3.3.6",
-    "css-loader": "node_modules/css-loader",
+    "css-loader": "^0.23.1",
+    "eslint": "^3.2.2",
     "node-sass": "^3.8.0",
     "react": "^15.2.1",
     "react-dom": "^15.2.1",
     "react-router": "^2.6.0",
     "sass-loader": "^4.0.0",
-    "style-loader": "node_modules/style-loader",
+    "style-loader": "^0.13.1",
     "webpack": "^1.13.1",
     "webpack-dev-server": "^1.14.1",
     "webpack-devserver": "0.0.4"
@@ -32,9 +34,9 @@
   "devDependencies": {
     "babel-preset-es2015": "^6.9.0",
     "babel-preset-react": "^6.11.1",
-    "css-loader": "node_modules/css-loader",
     "eslint": "^3.1.1",
     "eslint-plugin-react": "^5.2.2",
+    "json-loader": "^0.5.4",
     "style-loader": "^0.13.1"
   }
 }
