--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "bootstrap": "^3.3.6",
     "css-loader": "^0.23.1",
     "eslint": "^3.2.2",
+    "install": "^0.8.1",
     "node-sass": "^3.8.0",
+    "npm": "^3.10.5",
     "react": "^15.2.1",
     "react-dom": "^15.2.1",
     "react-router": "^2.6.0",
